# speedofsound

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  ai.nexiant.voicestream.yml  gradle.properties  io.voicestream.VoiceStream.yml  meson.build  mkdocs.yml  settings.gradle.kts
.claude/skills/release/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.md
app/: build.gradle.kts
app/src/main/kotlin/com/zugaldia/speedofsound/app/: App.kt
app/src/main/resources/: voicestream.gresource.xml
core/: build.gradle.kts
core/libs/: Makefile
core/src/main/kotlin/com/zugaldia/speedofsound/core/: Constants.kt  Utils.kt
core/src/main/resources/models/asr/: Makefile
core/src/test/kotlin/com/zugaldia/speedofsound/core/: ConstantsTest.kt
data/: ai.nexiant.voicestream.desktop.in  ai.nexiant.voicestream.gschema.xml  ai.nexiant.voicestream.metainfo.xml.in  ai.nexiant.voicestream.service.in  io.voicestream.VoiceStream.desktop.in  io.voicestream.VoiceStream.gschema.xml  io.voicestream.VoiceStream.metainfo.xml.in  io.voicestream.VoiceStream.service.in  meson.build
data/icons/: meson.build
docs/: RESUME.md  faq.md  getting-started.md  index.md  keyboard-shortcut.md  support.md  troubleshooting.md  user-guide.md
docs/superpowers/plans/: 2026-04-27-vad-endpointing-and-compute-selector.md  2026-05-01-v0.15.0-vad-provider-gpu-appimage.md
docs/superpowers/specs/: 2026-04-27-vad-endpointing-and-compute-selector-design.md
scripts/: build-appimage.sh  build-gpu-jar.sh  rebrand.sh  setup-distrobox.sh  trigger.sh
snap/: snapcraft.yaml
(+51 files in other folders)
